# snacks-djangoX

./: .gitignore  README.md  pyproject.toml
accounts/: admin.py
config/: settings.py
snacks/: models.py  tests.py  urls.py  views.py
snacks/migrations/: 0001_initial.py  0002_rename_name_snack_title.py
templates/: _base.html
templates/snacks/: base.html  snack_create.html  snack_delete.html  snack_detail.html  snack_list.html  snack_update.html
